@@ -1,2 +1,3 @@
 EBUILD cl-decoration-meta-11.3-r1.ebuild 1063 RMD160 fabd5c72e40fc211bb8abe1ed5817e899f02b77d SHA1 5b54b69f9c229006bf734c1c18359236dd30e571 SHA256 11b3ca1678d003b53e8481bc1061945612007f20e557952fc1b7aebd2c025afd
-MISC ChangeLog 1877 RMD160 1a5076ffa0c303caacc17dcfbfe50dd5e641b0a3 SHA1 90468a2343ef1b7e8a92aca8ea8d7c0ceb247eab SHA256 20837833490cf34e127b7e7b5fa4c87e8a8a91a90fbdf2b544933934b4a08068
+EBUILD cl-decoration-meta-11.3-r2.ebuild 1003 RMD160 8a3d574a6b20fc4b79714ab71c24f944766ccf2b SHA1 62dad4590f23be8f5e1a8e7b53ea31bd43a551d1 SHA256 ba7b0056e94bdcff9c3153bac3d682d94a14ff6dd84734a5b322e1be5740f279
+MISC ChangeLog 2085 RMD160 b01dc47b2600fdb78542148fd55cba82327e1372 SHA1 a4216b8604ceddb5d74323a5794b2d33b3ba17c6 SHA256 08d2b1a7d71cc32b8e84ac8f269fe72ae2bbe8ece1d63b2f891678ff80b3dfb6
