@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cl-decoration-meta-11.3-r2 (30 Mar 2011)
+
+  30 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cl-decoration-meta-11.3-r2.ebuild:
+  Removed redundant themes (Gentoo bugs #352263 and #292201)
+
 *cl-decoration-meta-11.3-r1 (09 Mar 2011)
 
   09 Mar 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
